--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
 	          <li class="nav-item"><a href="#home-section" class="nav-link"><span>Home</span></a></li>
 	          <li class="nav-item"><a href="#about-section" class="nav-link"><span>About</span></a></li>
 	          <li class="nav-item"><a href="#resume-section" class="nav-link"><span>Resume</span></a></li>
+	          <li class="nav-item"><a href="#services-section" class="nav-link"><span>Services</span></a></li>
 	          <li class="nav-item"><a href="#projects-section" class="nav-link"><span>Projects</span></a></li>
+	          <li class="nav-item"><a href="#blog-section" class="nav-link"><span>My Blog</span></a></li>
 	          <li class="nav-item"><a href="#contact-section" class="nav-link"><span>Contact</span></a></li>
 	        </ul>
 	      </div>
@@ -184,7 +186,7 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2023 (Feb-Dec)</span>
-		    					<h2>Web Marketing</h2>
+		    					<h2>PHP Full Stack Developer</h2>
 		    					<span class="position">CHIRPN IT SOLUTION PUNE</span>
 		    					<p>In Feb 2023 I Joined Chirpn which is in Pune as a Remote
 									Person and over there I Worked on Magento, WordPress and
@@ -208,9 +210,9 @@
 					    	</div>
 					    	<div class="text pl-3">
 		    					<span class="date">2024 (Oct)</span>
-							<h2>Freelancing Partner</h2>
-							<span class="position">Humans Softtech</span>
-		    					<p>Full Stack Web Developer Freelancing Partner</p>
+		    					<h2>Full Stack Web Developer - Freelancing Partner</h2>
+		    					<span class="position">Humans Softtech · Freelance</span>
+		    					<p>During my tenure at Humans Softtech as a Senior Developer, I not only contributed to the technical development of projects but also took on multiple managerial responsibilities. I communicated with clients to discuss their requirements, provided project quotations, and oversaw the entire project process from start to finish. I ensured smooth communication between the clients and developers, making sure projects were delivered successfully and met client expectations.</p>
 		    				</div>
 	    				</div>
 					  </div>
@@ -384,57 +386,57 @@
         </div>
     		<div class="row no-gutters">
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-1.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/Screenshot.png);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://www.stealthbelt.com/">Stealthbelt</a></h3>
+	    					<span>Ecommerce,Magento</span>
 	    				</div>
     				</div>
   				</div>
   				<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-2.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/MHR-600x528.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://myhomerocksltd.co.uk/">MHR - My Home Rocks</a></h3>
+	    					<span>Ecommerce,Magento</span>
 	    				</div>
     				</div>
   				</div>
 
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-3.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/portfolio-arumdental-600x528.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://www.arumdentalshop.com/">Arumdentalshop</a></h3>
+	    					<span>Ecommerce,Magento</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-4.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/portfolio-permaculture-600x528.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://shop.permaculture.co.uk/">permaculture</a></h3>
+	    					<span>Ecommerce,Magento,Wordpress</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-5.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/CV-600x528.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://craftsventure.com/">Craftsventure</a></h3>
+	    					<span>Ecommerce,Laravel</span>
 	    				</div>
     				</div>
     			</div>
     			<div class="col-md-4">
-    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/work-6.jpg);">
+    				<div class="project img ftco-animate d-flex justify-content-center align-items-center" style="background-image: url(images/Browns-co-600x528.jpg);">
     					<div class="overlay"></div>
 	    				<div class="text text-center p-4">
-	    					<h3><a href="#">Branding &amp; Illustration Design</a></h3>
-	    					<span>Web Design</span>
+	    					<h3><a href="https://brownsandco.ae/">Brownsandco</a></h3>
+	    					<span>WordPress</span>
 	    				</div>
     				</div>
     			</div>
@@ -448,7 +450,6 @@
 				<div class="row justify-content-center">
 					<div class="col-md-7 ftco-animate text-center">
 						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
 						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
 					</div>
 				</div>
@@ -461,7 +462,6 @@
           <div class="col-md-7 heading-section text-center ftco-animate">
             <h1 class="big big-2">Contact</h1>
             <h2 class="mb-4">Contact Me</h2>
-            <!-- <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p> -->
           </div>
         </div>
 
@@ -578,10 +578,10 @@
           </div>
           <div class="col-md">
             <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
+            	<h2 class="ftco-heading-2">Contact</h2>
             	<div class="block-23 mb-3">
 	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">203 Fake St. Mountain View, San Francisco, California, USA</span></li>
+	                <li><span class="icon icon-skype"></span><span class="text">live:.cid.8e9aa5388bc1a6b8</span></li>
 	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">+91 7984854849</span></a></li>
 	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">Codderteam@gmail.com</span></a></li>
 	              </ul>
